<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_background"
    tools:context=".fragments.AddDocumentFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userNameAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_back"
                android:gravity="start"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="20sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/userDocTypeAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/userNameAdd"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_back"
                android:gravity="start"
                android:hint="@string/enter_document_type"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="20sp"
                tools:ignore="Autofill" />

            <LinearLayout
                android:id="@+id/linearLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/userDocTypeAdd"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/imgFrontAdd"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/add_front_image"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    app:cornerRadius="15dp"
                    app:icon="@drawable/ic_add"
                    app:strokeColor="@color/purple_700"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/imgBackAdd"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/add_back_image"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    app:cornerRadius="15dp"
                    app:icon="@drawable/ic_add"
                    app:strokeColor="@color/purple_700"
                    app:strokeWidth="1dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLay"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/gallery"
                    android:textColor="@color/textColor0"
                    android:textSize="18sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/cameraToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/camera"
                    android:textColor="@color/textColor0"
                    android:textSize="18sp" />

            </LinearLayout>

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/userDocImgFront"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:layout_below="@id/linearLay1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_back"
                android:padding="3dp"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/userDocImgBack"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:layout_below="@id/userDocImgFront"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_back"
                android:padding="3dp"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>