<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="#E1DFE6"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/enteredConfirmPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/enter_pin_back"
                android:gravity="center"
                android:hint="@string/enter_your_pin"
                android:inputType="numberPassword"
                android:maxLength="10"
                android:padding="20dp"
                android:textColorHint="#5C5A5A"
                android:textSize="24sp"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/enteredConfirmPin"
                android:layout_marginTop="45dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancelBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/cancel_button_back"
                    android:gravity="center"
                    android:padding="13dp"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/confirmBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/confirm_button_back"
                    android:gravity="center"
                    android:padding="13dp"
                    android:text="@string/confirm"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>