<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_background"
    tools:context=".SplashScreenActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="Secure Your Important Documents"
        android:textColor="@color/textColor1"
        android:textSize="24sp"
        android:textStyle="italic"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lottieAnimationView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/create_new_pin"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="10"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/verifyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLay"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginTop="30dp"
        android:padding="13dp"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="10dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/txt"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/lock_animation_lottie" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/from_7ullc"
        android:textColor="@color/textColor0"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>